added geo location

--- a/presentation/pubspec.yaml
+++ b/presentation/pubspec.yaml
@@ -10,10 +10,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.0.1
-  intl: ^0.17.0
   domain:
     path: "../domain"
+  flutter_bloc: ^8.0.1
+  intl: ^0.17.0
+  geolocator: ^9.0.1
 
 dev_dependencies:
   flutter_test:
