added flutter_modular navigation

--- a/presentation/pubspec.yaml
+++ b/presentation/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   domain:
     path: "../domain"
   flutter_bloc: ^8.0.1
+  flutter_modular: any
   intl: ^0.17.0
   geolocator: ^9.0.1
 
