--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_localizations: # move translation to presentation or fix IDE errors
+  flutter_localizations:
     sdk: flutter
   bloc: ^8.0.2
   flutter_bloc: ^8.0.1
