--- a/features/weather/presentation/pubspec.yaml
+++ b/features/weather/presentation/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_modular: any
   intl: ^0.17.0
   geolocator: ^9.0.1
+  rxdart: ^0.27.5
 
 dev_dependencies:
   flutter_test:
