--- a/features/weather/data/pubspec.yaml
+++ b/features/weather/data/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     path: "../domain"
   json_annotation: ^4.4.0
   retrofit: '>=3.0.0 <4.0.0'
+  dio: any
   flutter_modular: any
 
 dev_dependencies:
