--- a/features/weather/presentation/pubspec.yaml
+++ b/features/weather/presentation/pubspec.yaml
@@ -1,4 +1,4 @@
-name: presentation
+name: features_weather_presentation
 description: A new Flutter package project.
 version: 0.0.1
 publish_to: none
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  domain:
+  features_weather_domain:
     path: "../domain"
   flutter_bloc: ^8.0.1
   flutter_modular: any
