--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
     path: "features/weather/data"
   features_weather_presentation:
     path: "features/weather/presentation"
+  features_reddit_posts_presentation:
+    path: "features/reddit_posts/presentation"
 
 
   # The following adds the Cupertino Icons font to your application.
