use common for posts

--- a/features/reddit_posts/presentation/pubspec.yaml
+++ b/features/reddit_posts/presentation/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  common_presentation:
+    path: "../../common/presentation"
   flutter_bloc: ^8.0.1
   flutter_modular: any
 
