--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  intl: any
   bloc: ^8.0.2
   flutter_bloc: ^8.0.1
   hydrated_bloc: ^8.0.1
