--- a/features/weather/presentation/pubspec.yaml
+++ b/features/weather/presentation/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   features_weather_domain:
     path: "../domain"
   common_presentation:
-    path: "../../common/presentation"
+    path: "../../../common/presentation"
   flutter_bloc: ^8.0.1
   flutter_modular: any
   geolocator: ^9.0.1
