--- a/features/reddit_posts/presentation/pubspec.yaml
+++ b/features/reddit_posts/presentation/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
     path: "../domain"
   common_presentation:
     path: "../../../common/presentation"
+  common_domain:
+    path: "../../../common/domain"
   flutter_bloc: ^8.0.1
   flutter_modular: any
 
