--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -1,15 +1,15 @@
-name: unit_tests
+name: deploy_app
 
 on:
   workflow_dispatch:
 
 jobs:
-  tests:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: Install and set Flutter version
         uses: subosito/flutter-action@v2
@@ -20,5 +20,5 @@ jobs:
       - name: Install project dependencies
         run: sh scripts/pub_get_all.sh
 
-      - name: Run unit tests
-        run: sh scripts/run_tests.sh
+      - name: Deploy web app
+        uses: bluefireteam/flutter-gh-pages@v7
