--- a/features/reddit_posts/presentation/pubspec.yaml
+++ b/features/reddit_posts/presentation/pubspec.yaml
@@ -18,8 +18,8 @@ dependencies:
     path: "../../../common/presentation"
   common_domain:
     path: "../../../common/domain"
-  flutter_bloc: ^8.0.1
-  flutter_modular: any
+  flutter_bloc: ^8.1.3
+  flutter_modular: ^6.3.2
 
 dev_dependencies:
   flutter_test:
