--- a/features/weather/presentation/pubspec.yaml
+++ b/features/weather/presentation/pubspec.yaml
@@ -19,8 +19,8 @@ dependencies:
     path: "../../../common/presentation"
   common_domain:
     path: "../../../common/domain"
-  flutter_bloc: ^8.0.1
-  flutter_modular: any
+  flutter_bloc: ^8.1.3
+  flutter_modular: ^6.3.2
   geolocator: ^9.0.1
   rxdart: ^0.27.5
 
