--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,10 @@ dependencies:
     sdk: flutter
   intl: any
   bloc: ^8.0.2
-  flutter_bloc: ^8.0.1
-  hydrated_bloc: ^8.0.1
+  flutter_bloc: ^8.1.3
+  hydrated_bloc: ^9.1.2
   path_provider: any
-  flutter_modular: any
+  flutter_modular: ^6.3.2
   features_home_presentation:
     path: "features/home/presentation"
   features_weather_domain:
@@ -64,7 +64,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  modular_test: any
   bloc_test: ^9.0.2
   mocktail: ^0.3.0
 
