--- a/features/weather/data/pubspec.yaml
+++ b/features/weather/data/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  bloc_test: ^9.0.2
+  mocktail: ^0.3.0
+
   flutter_lints: ^2.0.0
   build_runner: ^2.0.0
   json_serializable: ^6.0.0
