--- a/features/weather/domain/pubspec.yaml
+++ b/features/weather/domain/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  bloc_test: ^9.0.2
+  mocktail: ^0.3.0
+
   flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
