--- a/features/weather/presentation/pubspec.yaml
+++ b/features/weather/presentation/pubspec.yaml
@@ -27,6 +27,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  bloc_test: ^9.0.2
+  mocktail: ^0.3.0
+
+  hydrated_bloc: ^9.1.2
+
   flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
