--- a/features/reddit_posts/presentation/pubspec.yaml
+++ b/features/reddit_posts/presentation/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
     path: "../../../common/domain"
   flutter_bloc: ^8.1.3
   flutter_modular: ^6.3.2
+  transparent_image: 2.0.1
 
 dev_dependencies:
   flutter_test:
