--- a/features/reddit_posts/data/pubspec.yaml
+++ b/features/reddit_posts/data/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   json_annotation: ^4.8.1
   retrofit: '>=3.0.0 <4.0.0'
   dio: any
+  curl_logger_dio_interceptor: any
   flutter_modular: ^6.3.2
 
 dev_dependencies:
