--- a/features/reddit_posts/presentation/pubspec.yaml
+++ b/features/reddit_posts/presentation/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_modular: ^6.3.2
   transparent_image: 2.0.1
+  flutterui_modifiers: any
 
 dev_dependencies:
   flutter_test:
