--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
     path: "features/reddit_posts/data"
   features_reddit_posts_presentation:
     path: "features/reddit_posts/presentation"
+  features_forms_presentation:
+    path: "features/forms/presentation"
 
 
   # The following adds the Cupertino Icons font to your application.
