--- a/features/forms/presentation/pubspec.yaml
+++ b/features/forms/presentation/pubspec.yaml
@@ -18,9 +18,12 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_modular: ^6.3.2
   formz: ^0.7.0
+  freezed_annotation: ^2.4.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
+  build_runner: ^2.0.0
+  freezed: ^2.4.5
 
 flutter:
   generate: true
