added rest inputs

--- a/features/forms/presentation/pubspec.yaml
+++ b/features/forms/presentation/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_modular: ^6.3.2
   formz: ^0.7.0
   freezed_annotation: ^2.4.1
+  file_picker: ^8.0.0+1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
