--- a/features/forms/presentation/pubspec.yaml
+++ b/features/forms/presentation/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.1
 publish_to: none
 
 environment:
-  sdk: '>=3.2.6 <4.0.0'
+  sdk: '>=3.4.3 <4.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
@@ -14,17 +14,16 @@ dependencies:
     sdk: flutter
   common_presentation:
     path: "../../../common/presentation"
-  flutterui_modifiers: any
-  flutter_bloc: ^8.1.3
-  flutter_modular: ^6.3.2
+  flutter_bloc: ^8.1.6
+  flutter_modular: ^6.3.4
   formz: ^0.7.0
   freezed_annotation: ^2.4.1
-  file_picker: ^8.0.0+1
+  file_picker: ^8.0.5
 
 dev_dependencies:
-  flutter_lints: ^2.0.0
-  build_runner: ^2.0.0
-  freezed: ^2.4.5
+  flutter_lints: ^4.0.0
+  build_runner: ^2.4.11
+  freezed: ^2.5.2
 
 flutter:
   generate: true
