--- a/features/weather/presentation/pubspec.yaml
+++ b/features/weather/presentation/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.1
 publish_to: none
 
 environment:
-  sdk: '>=3.1.5 <4.0.0'
+  sdk: '>=3.4.3 <4.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
@@ -12,27 +12,27 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: any
+  intl: ^0.19.0
   features_weather_domain:
     path: "../domain"
   common_presentation:
     path: "../../../common/presentation"
   common_domain:
     path: "../../../common/domain"
-  flutter_bloc: ^8.1.3
-  flutter_modular: ^6.3.2
-  geolocator: ^9.0.1
-  rxdart: ^0.27.5
+  flutter_bloc: ^8.1.6
+  flutter_modular: ^6.3.4
+  geolocator: ^12.0.0
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  bloc_test: ^9.0.2
-  mocktail: ^0.3.0
+  bloc_test: ^9.1.7
+  mocktail: ^1.0.4
 
-  hydrated_bloc: ^9.1.2
+  hydrated_bloc: ^9.1.5
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
 
 flutter:
   generate: true
