--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,19 +6,19 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.5 <4.0.0'
+  sdk: '>=3.4.3 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: any
-  bloc: ^8.0.2
-  flutter_bloc: ^8.1.3
-  hydrated_bloc: ^9.1.2
-  path_provider: any
-  flutter_modular: ^6.3.2
+  intl: ^0.19.0
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.6
+  hydrated_bloc: ^9.1.5
+  path_provider: ^2.1.3
+  flutter_modular: ^6.3.4
   safe_device: ^1.1.7
   features_home_presentation:
     path: "features/home/presentation"
@@ -36,10 +36,10 @@ dependencies:
     path: "features/reddit_posts/presentation"
   features_forms_presentation:
     path: "features/forms/presentation"
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.8
 
 dev_dependencies:
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
 
 flutter:
   generate: true
