--- a/features/forms/presentation/pubspec.yaml
+++ b/features/forms/presentation/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   formz: ^0.7.0
   freezed_annotation: ^2.4.1
   file_picker: ^8.0.5
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_lints: ^4.0.0
