--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -9,7 +9,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Install and set Flutter version
         uses: subosito/flutter-action@v2
@@ -19,6 +19,12 @@ jobs:
 
       - name: Install project dependencies
         run: sh scripts/pub_get_all.sh
+
+      - name: Localizations
+        run: sh scripts/generate_translate_file.sh
+
+      - name: Build Runner
+        run: sh scripts/build_runner.sh
 
       - name: Deploy web app
         uses: bluefireteam/flutter-gh-pages@v7
