--- a/features/forms/presentation/pubspec.yaml
+++ b/features/forms/presentation/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   file_picker: ^8.0.5
   rxdart: ^0.28.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_lints: ^4.0.0
