--- a/features/reddit_posts/data/pubspec.yaml
+++ b/features/reddit_posts/data/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
     path: "../../../common/presentation"
   common_domain:
     path: "../../../common/domain"
+  freezed_annotation: ^2.4.1
   json_annotation: ^4.9.0
   retrofit: ^4.1.0
   dio: ^5.4.3+1
@@ -27,6 +28,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^4.0.0
   build_runner: ^2.4.11
+  freezed: ^2.5.2
   json_serializable: ^6.8.0
   retrofit_generator: ^8.1.0
 
