--- a/features/forms/presentation/pubspec.yaml
+++ b/features/forms/presentation/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   file_picker: ^8.0.5
   rxdart: ^0.28.0
   image_picker: ^1.1.2
+  widgets_modifiers: ^0.3.42
 
 dev_dependencies:
   flutter_lints: ^4.0.0
