--- a/features/home/presentation/pubspec.yaml
+++ b/features/home/presentation/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
     path: "../../../features/forms/presentation"
   features_webview_presentation:
     path: "../../../features/webview/presentation"
+  widgets_modifiers: ^0.3.42
 
 dev_dependencies:
   flutter_test:
