--- a/features/webview/presentation/pubspec.yaml
+++ b/features/webview/presentation/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   file_picker: ^8.0.5
   url_launcher: ^6.3.0
   flutter_easyloading: ^3.0.5
+  widgets_modifiers: ^0.3.42
 
 dev_dependencies:
   flutter_lints: ^3.0.0
