--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
     path: "features/forms/presentation"
   features_webview_presentation:
     path: "features/webview/presentation"
+  features_experiments_presentation:
+    path: "features/experiments/presentation"
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
