--- a/features/home/presentation/pubspec.yaml
+++ b/features/home/presentation/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  intl: ^0.19.0
   flutter_bloc: ^8.1.6
   flutter_modular: ^6.3.4
   common_presentation:
