--- a/features/webview/presentation/pubspec.yaml
+++ b/features/webview/presentation/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  intl: ^0.19.0
   common_presentation:
     path: "../../../common/presentation"
   flutter_modular: ^6.3.4
