--- a/features/experiments/presentation/pubspec.yaml
+++ b/features/experiments/presentation/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_modular: ^6.3.4
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
