--- a/common/data/pubspec.yaml
+++ b/common/data/pubspec.yaml
@@ -8,12 +8,12 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
-  dio: ^5.4.3+1
+  dio: ^5.6.0
   flutter:
     sdk: flutter
   flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 flutter:
