--- a/features/reddit_posts/data/pubspec.yaml
+++ b/features/reddit_posts/data/pubspec.yaml
@@ -16,10 +16,10 @@ dependencies:
     path: "../../../common/presentation"
   common_domain:
     path: "../../../common/domain"
-  freezed_annotation: ^2.4.1
+  freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
-  retrofit: ^4.1.0
-  dio: ^5.4.3+1
+  retrofit: ^4.2.0
+  dio: ^5.6.0
   curl_logger_dio_interceptor: ^1.0.0
   flutter_modular: ^6.3.4
 
@@ -30,6 +30,6 @@ dev_dependencies:
   build_runner: ^2.4.11
   freezed: ^2.5.2
   json_serializable: ^6.8.0
-  retrofit_generator: ^8.1.0
+  retrofit_generator: ^8.2.0
 
 flutter:
