--- a/common/presentation/pubspec.yaml
+++ b/common/presentation/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   intl: ^0.19.0
   flutter_bloc: ^8.1.6
+  internet_connection_checker: ^2.0.0
 
 dev_dependencies:
   flutter_test:
