--- a/features/reddit_posts/data/pubspec.yaml
+++ b/features/reddit_posts/data/pubspec.yaml
@@ -10,18 +10,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  features_reddit_posts_domain:
-    path: "../domain"
-  common_presentation:
-    path: "../../../common/presentation"
-  common_domain:
-    path: "../../../common/domain"
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
   retrofit: ^4.2.0
   dio: ^5.6.0
   curl_logger_dio_interceptor: ^1.0.0
   flutter_modular: ^6.3.4
+  features_reddit_posts_domain:
+    path: "../domain"
+  common_data:
+    path: "../../../common/data"
+  common_domain:
+    path: "../../../common/domain"
 
 dev_dependencies:
   flutter_test:
