--- a/features/reddit_posts/domain/pubspec.yaml
+++ b/features/reddit_posts/domain/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_modular: ^6.3.4
+  common_domain:
+    path: "../../../common/domain"
 
 dev_dependencies:
   flutter_test:
