--- a/features/reddit_posts/data/pubspec.yaml
+++ b/features/reddit_posts/data/pubspec.yaml
@@ -10,18 +10,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  freezed_annotation: ^2.4.4
-  json_annotation: ^4.9.0
-  retrofit: ^4.2.0
-  dio: ^5.6.0
-  curl_logger_dio_interceptor: ^1.0.0
-  flutter_modular: ^6.3.4
   features_reddit_posts_domain:
     path: "../domain"
   common_data:
     path: "../../../common/data"
   common_domain:
     path: "../../../common/domain"
+  flutter_modular: ^6.3.4
+  freezed_annotation: ^2.4.4
+  json_annotation: ^4.9.0
+  retrofit: ^4.2.0
+  dio: ^5.6.0
+  curl_logger_dio_interceptor: ^1.0.0
+  drift: ^2.20.0
+  drift_flutter: ^0.1.0
 
 dev_dependencies:
   flutter_test:
@@ -31,5 +33,6 @@ dev_dependencies:
   freezed: ^2.5.2
   json_serializable: ^6.8.0
   retrofit_generator: ^8.2.0
+  drift_dev: ^2.20.0
 
 flutter:
