--- a/common/data/pubspec.yaml
+++ b/common/data/pubspec.yaml
@@ -10,7 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  dio: ^5.6.0
+  dio: ^5.7.0
+  dio_cache_interceptor: ^3.5.0
   flutter_secure_storage: ^9.2.2
   common_domain:
     path: "../../common/domain"
