--- a/common/presentation/pubspec.yaml
+++ b/common/presentation/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   intl: ^0.19.0
   flutter_bloc: ^8.1.6
   internet_connection_checker_plus: ^2.5.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
