--- a/melos.yaml
+++ b/melos.yaml
@@ -12,8 +12,34 @@ command:
 scripts:
   prebuild:
     run: |
-      melos exec --depends-on="build_runner"          -- dart run build_runner build --delete-conflicting-outputs
-      melos exec --depends-on="flutter_localizations" -- flutter gen-l10n
+      melos run build_runner
+      melos run flutter_localizations
 
-  setup:web:
-    run: dart scripts/download_drift_for_web.dart
+  prebuild:web:
+    run: |
+      melos run prebuild
+      dart scripts/download_drift_for_web.dart
+
+  pub_get:
+    exec: dart pub get
+
+  pub_upgrade:
+    exec: pub upgrade --major-versions --tighten
+
+  build_runner:
+    packageFilters:
+      dependsOn:
+        - build_runner
+    exec: dart run build_runner build --delete-conflicting-outputs
+
+  flutter_localizations:
+    packageFilters:
+      dependsOn:
+        - flutter_localizations
+    exec: flutter gen-l10n
+
+  test:
+    packageFilters:
+      dirExists:
+        - test
+    exec: flutter test
