--- a/apps/app_main/android/app/build.gradle
+++ b/apps/app_main/android/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
+    id "com.google.firebase.appdistribution"
 }
 
 def localProperties = new Properties()
@@ -49,6 +50,11 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
+
+            firebaseAppDistribution {
+                artifactType = "APK"
+                groups = "beta_testers"
+            }
         }
     }
 }
