--- a/.github/workflows/deploy_android.yml
+++ b/.github/workflows/deploy_android.yml
@@ -29,8 +29,7 @@ jobs:
 
       - name: Build Android
         run:
-          cd apps/app_main
-          flutter build apk --release
+          cd apps/app_main && flutter build apk --release
 
       - name: Upload Release
         uses: actions/upload-release-asset@v1
