--- a/apps/app_main/android/app/build.gradle
+++ b/apps/app_main/android/app/build.gradle
@@ -30,8 +30,16 @@ android {
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+        // https://pub.dev/packages/flutter_local_notifications#gradle-setup
+        // Flag to enable support for the new language APIs
+        coreLibraryDesugaringEnabled true
+    }
+
+    dependencies {
+        // https://pub.dev/packages/flutter_local_notifications#gradle-setup
+        coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
     }
 
     defaultConfig {
