--- a/packages/features/experiments/presentation/pubspec.yaml
+++ b/packages/features/experiments/presentation/pubspec.yaml
@@ -4,8 +4,7 @@ version: 0.0.1
 homepage:
 
 environment:
-  sdk: '>=3.4.3 <4.0.0'
-  flutter: ">=1.17.0"
+  sdk: ^3.5.4
 
 dependencies:
   flutter:
@@ -14,7 +13,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
   shaders:
