--- a/packages/features/forms/presentation/pubspec.yaml
+++ b/packages/features/forms/presentation/pubspec.yaml
@@ -4,8 +4,7 @@ version: 0.0.1
 publish_to: none
 
 environment:
-  sdk: '>=3.4.3 <4.0.0'
-  flutter: ">=1.17.0"
+  sdk: ^3.5.4
 
 dependencies:
   flutter:
@@ -18,13 +17,13 @@ dependencies:
   flutter_modular: ^6.3.4
   formz: ^0.7.0
   freezed_annotation: ^2.4.4
-  file_picker: ^8.1.2
+  file_picker: ^8.1.6
   rxdart: ^0.28.0
   image_picker: ^1.1.2
   widgets_modifiers: ^0.3.42
 
 dev_dependencies:
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
   build_runner: ^2.4.11
   freezed: ^2.5.2
 
