--- a/packages/features/stackoverflow/presentation/pubspec.yaml
+++ b/packages/features/stackoverflow/presentation/pubspec.yaml
@@ -4,8 +4,7 @@ version: 0.0.1
 publish_to: none
 
 environment:
-  sdk: '>=3.4.3 <4.0.0'
-  flutter: ">=1.17.0"
+  sdk: ^3.5.4
 
 dependencies:
   flutter:
@@ -20,7 +19,7 @@ dependencies:
   riverpod_annotation:
 
 dev_dependencies:
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
   build_runner: ^2.4.11
   freezed: ^2.5.2
   json_serializable: ^6.8.0
