--- a/packages/features/weather/data/pubspec.yaml
+++ b/packages/features/weather/data/pubspec.yaml
@@ -4,8 +4,7 @@ version: 0.0.1
 publish_to: none
 
 environment:
-  sdk: '>=3.4.3 <4.0.0'
-  flutter: ">=1.17.0"
+  sdk: ^3.5.4
 
 dependencies:
   flutter:
@@ -22,7 +21,7 @@ dev_dependencies:
   bloc_test: ^9.1.7
   mocktail: ^1.0.4
 
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
   build_runner: ^2.4.11
   json_serializable: ^6.8.0
   retrofit_generator: ^8.2.0
