--- a/packages/features/weather/domain/pubspec.yaml
+++ b/packages/features/weather/domain/pubspec.yaml
@@ -4,8 +4,7 @@ version: 0.0.1
 publish_to: none
 
 environment:
-  sdk: '>=3.4.3 <4.0.0'
-  flutter: ">=1.17.0"
+  sdk: ^3.5.4
 
 dependencies:
   flutter:
@@ -18,6 +17,6 @@ dev_dependencies:
   bloc_test: ^9.1.7
   mocktail: ^1.0.4
 
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
