--- a/packages/features/weather/presentation/pubspec.yaml
+++ b/packages/features/weather/presentation/pubspec.yaml
@@ -4,8 +4,7 @@ version: 0.0.1
 publish_to: none
 
 environment:
-  sdk: '>=3.4.3 <4.0.0'
-  flutter: ">=1.17.0"
+  sdk: ^3.5.4
 
 dependencies:
   flutter:
@@ -29,7 +28,7 @@ dev_dependencies:
 
   hydrated_bloc: ^9.1.5
 
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
   generate: true
