--- a/packages/features/webview/presentation/pubspec.yaml
+++ b/packages/features/webview/presentation/pubspec.yaml
@@ -4,8 +4,7 @@ version: 0.0.1
 publish_to: none
 
 environment:
-  sdk: '>=3.4.3 <4.0.0'
-  flutter: ">=1.17.0"
+  sdk: ^3.5.4
 
 dependencies:
   flutter:
@@ -16,15 +15,15 @@ dependencies:
   common_presentation:
   flutter_modular: ^6.3.4
   widgets_modifiers: ^0.3.42
-  path_provider: ^2.1.4
-  url_launcher: ^6.3.0
+  path_provider: ^2.1.5
+  url_launcher: ^6.3.1
   flutter_inappwebview: ^6.1.5
-  open_file: ^3.3.2
-  mime: ^1.0.5
-  file_picker: ^8.1.2
+  open_file: ^3.5.10
+  mime: ^2.0.0
+  file_picker: ^8.1.6
 
 dev_dependencies:
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
   generate: true
