--- a/.github/workflows/deploy_android.yml
+++ b/.github/workflows/deploy_android.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Upload Release
         uses: actions/upload-release-asset@v1
         with:
-          upload_url: ${{ github.event.release.upload_url }}
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: apps/app_main/build/app/outputs/flutter-apk/app-release.apk
           asset_name: app-release.apk
           asset_content_type: application/vnd.android.package-archive
