--- a/.github/workflows/deploy_android.yml
+++ b/.github/workflows/deploy_android.yml
@@ -3,6 +3,9 @@ name: deploy_android
 on:
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -38,21 +41,12 @@ jobs:
           version=$(grep '^version:' apps/app_main/pubspec.yaml | sed 's/version: //')
           echo "version=$version" >> $GITHUB_ENV
 
-      - name: Create GitHub Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: v${{ env.version }}
-          release_name: Release v${{ env.version }}
-          draft: false
-          prerelease: false
+      - name: Install GitHub CLI
+        run: sudo apt-get install gh -y
 
-      - name: Upload Release
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: apps/app_main/build/app/outputs/flutter-apk/app-release.apk
-          asset_name: app-release.apk
-          asset_content_type: application/vnd.android.package-archive
+      - name: Create GitHub Release and Upload APK
+        run: |
+          gh release create v${{ env.version }} apps/app_main/build/app/outputs/flutter-apk/app-release.apk --title "Release v${{ env.version }}"
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        shell: bash
