--- a/packages/features/stackoverflow/presentation/pubspec.yaml
+++ b/packages/features/stackoverflow/presentation/pubspec.yaml
@@ -11,18 +11,18 @@ dependencies:
     sdk: flutter
   flutter_modular: ^6.3.4
   dio: ^5.7.0
-  flutter_hooks: ^0.18.0
+  flutter_hooks: ^0.20.5
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
-  hooks_riverpod:
-  html: ^0.15.0
-  riverpod_annotation:
+  hooks_riverpod: ^2.6.1
+  html: ^0.15.5
+  riverpod_annotation: ^2.6.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
-  build_runner: ^2.4.11
-  freezed: ^2.5.2
+  build_runner: ^2.4.14
+  freezed: ^2.5.7
   json_serializable: ^6.8.0
-  riverpod_generator:
+  riverpod_generator: ^2.6.3
 
 flutter:
