--- a/melos.yaml
+++ b/melos.yaml
@@ -9,6 +9,33 @@ command:
     hooks:
       post: melos run prebuild
 
+    environment:
+      sdk: ^3.5.4
+    dependencies:
+      # Common
+      flutter_modular: ^6.3.4
+      # Presentation
+      intl: ^0.19.0
+      flutter_bloc: ^8.1.6
+      widgets_modifiers: ^0.3.42
+      # Data
+      freezed_annotation: ^2.4.4
+      json_annotation: ^4.9.0
+      retrofit: ^4.4.2
+      dio: ^5.7.0
+      drift: ^2.23.0 # For web after changing version run sh scripts/download_drift_for_web.sh
+      drift_flutter: ^0.2.4
+
+    dev_dependencies:
+      flutter_lints: ^5.0.0
+      build_runner: ^2.4.14
+      freezed: ^2.5.7
+      json_serializable: ^6.8.0
+      retrofit_generator: ^9.1.7
+      drift_dev: ^2.23.0
+      bloc_test: ^9.1.7
+      mocktail: ^1.0.4
+
 scripts:
   prebuild:
     run: |
@@ -24,7 +51,7 @@ scripts:
     exec: dart pub get
 
   pub_upgrade:
-    exec: pub upgrade --major-versions --tighten
+    exec: dart pub upgrade --major-versions --tighten
 
   build_runner:
     packageFilters:
