--- a/packages/common/data/pubspec.yaml
+++ b/packages/common/data/pubspec.yaml
@@ -10,9 +10,9 @@ dependencies:
   flutter:
     sdk: flutter
   dio: ^5.7.0
-  dio_cache_interceptor: ^3.5.0
+  dio_cache_interceptor: ^3.5.1
   flutter_secure_storage: ^9.2.2
-  common_domain:
+  common_domain: ^0.0.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
