--- a/packages/features/forms/presentation/pubspec.yaml
+++ b/packages/features/forms/presentation/pubspec.yaml
@@ -12,20 +12,20 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.19.0
-  common_presentation:
+  common_presentation: ^0.0.1
   flutter_bloc: ^8.1.6
   flutter_modular: ^6.3.4
-  formz: ^0.7.0
+  formz: ^0.8.0
   freezed_annotation: ^2.4.4
-  file_picker: ^8.1.6
+  file_picker: ^8.1.7
   rxdart: ^0.28.0
   image_picker: ^1.1.2
   widgets_modifiers: ^0.3.42
 
 dev_dependencies:
   flutter_lints: ^5.0.0
-  build_runner: ^2.4.11
-  freezed: ^2.5.2
+  build_runner: ^2.4.14
+  freezed: ^2.5.7
 
 flutter:
   generate: true
