--- a/packages/features/reddit_posts/data/pubspec.yaml
+++ b/packages/features/reddit_posts/data/pubspec.yaml
@@ -9,26 +9,26 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  features_reddit_posts_domain:
-  common_data:
-  common_domain:
+  features_reddit_posts_domain: ^0.0.1
+  common_data: ^0.0.1
+  common_domain: ^0.0.1
   flutter_modular: ^6.3.4
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
-  retrofit: ^4.4.1
+  retrofit: ^4.4.2
   dio: ^5.7.0
-  drift: ^2.21.0 # For web after changing version run sh scripts/download_drift_for_web.sh
-  drift_flutter: ^0.2.3
+  drift: ^2.23.0 # For web after changing version run sh scripts/download_drift_for_web.sh
+  drift_flutter: ^0.2.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-  build_runner: ^2.4.11
-  freezed: ^2.5.2
+  build_runner: ^2.4.14
+  freezed: ^2.5.7
   json_serializable: ^6.8.0
-  retrofit_generator: ^8.2.0
-  drift_dev: ^2.21.0
+  retrofit_generator: ^9.1.7
+  drift_dev: ^2.23.0
 
 global_options:
   freezed:
