--- a/packages/features/reddit_posts/presentation/pubspec.yaml
+++ b/packages/features/reddit_posts/presentation/pubspec.yaml
@@ -12,9 +12,9 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.19.0
-  features_reddit_posts_domain:
-  common_presentation:
-  common_domain:
+  features_reddit_posts_domain: ^0.0.1
+  common_presentation: ^0.0.1
+  common_domain: ^0.0.1
   flutter_bloc: ^8.1.6
   flutter_modular: ^6.3.4
   transparent_image: 2.0.1
@@ -24,7 +24,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-  build_runner: ^2.4.11
+  build_runner: ^2.4.14
 
 flutter:
   generate: true
