--- a/packages/features/webview/presentation/pubspec.yaml
+++ b/packages/features/webview/presentation/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.19.0
-  common_presentation:
+  common_presentation: ^0.0.1
   flutter_modular: ^6.3.4
   widgets_modifiers: ^0.3.42
   path_provider: ^2.1.5
@@ -20,7 +20,7 @@ dependencies:
   flutter_inappwebview: ^6.1.5
   open_file: ^3.5.10
   mime: ^2.0.0
-  file_picker: ^8.1.6
+  file_picker: ^8.1.7
 
 dev_dependencies:
   flutter_lints: ^5.0.0
